fixing text-overflow

--- a/themes/hugo-theme-learn/static/css/theme-yaub.css
+++ b/themes/hugo-theme-learn/static/css/theme-yaub.css
@@ -1351,6 +1351,7 @@ div.colist > table > tbody > tr > td {
         overflow: hidden;
         padding-left: 1.7rem;
         color: var(--TOC-NEXTPREV-color);
+        text-overflow: ellipsis;
     }
 }
 
